[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/map_graph_editor/map_setting.gd" type="Script" id=1]
[ext_resource path="res://addons/map_graph_editor/fonts/map_setting_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/map_graph_editor/fonts/map_button_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/map_graph_editor/fonts/map_setting_edit_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/map_graph_editor/fonts/map_setting_head.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/map_graph_editor/fonts/ZenMaruGothic-Bold-Subset.ttf" type="DynamicFontData" id=6]

[sub_resource type="Image" id=7]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=6]
flags = 4
flags = 4
image = SubResource( 7 )
size = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = -5
extra_spacing_bottom = -5
font_data = ExtResource( 6 )

[sub_resource type="GDScript" id=8]
script/source = "tool
extends Node
func is_file_class(node):return node is Map"

[node name="MapSetting" type="MarginContainer"]
anchor_bottom = 0.911
margin_right = 414.0
margin_bottom = 0.0800171
mouse_filter = 1
custom_constants/margin_right = 12
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 6.0
margin_top = 6.0
margin_right = 408.0
margin_bottom = 644.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.313726 )

[node name="VB" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 408.0
margin_bottom = 644.0

[node name="MCMainButtons" type="MarginContainer" parent="VB"]
margin_right = 402.0
margin_bottom = 48.0
rect_min_size = Vector2( 262, 0 )
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VB/MCMainButtons"]
margin_left = 8.0
margin_top = 4.0
margin_right = 398.0
margin_bottom = 44.0
custom_constants/separation = 12

[node name="SaveButton" type="Button" parent="VB/MCMainButtons/HBoxContainer"]
margin_right = 70.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Save"
icon = SubResource( 6 )

[node name="ExportButton" type="Button" parent="VB/MCMainButtons/HBoxContainer"]
margin_left = 82.0
margin_right = 218.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Export JSON"
icon = SubResource( 6 )

[node name="MC" type="MarginContainer" parent="VB"]
margin_top = 52.0
margin_right = 402.0
margin_bottom = 108.0
rect_min_size = Vector2( 262, 0 )
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="SettingVisibleButton" type="Button" parent="VB/MC"]
margin_left = 8.0
margin_top = 4.0
margin_right = 398.0
margin_bottom = 52.0
rect_min_size = Vector2( 62, 48 )
custom_fonts/font = ExtResource( 3 )
text = "MENU"
icon = SubResource( 6 )
align = 0
expand_icon = true

[node name="PC" type="PanelContainer" parent="VB"]
margin_top = 112.0
margin_right = 402.0
margin_bottom = 638.0
mouse_filter = 1
size_flags_vertical = 3

[node name="MC" type="ScrollContainer" parent="VB/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 395.0
margin_bottom = 519.0
mouse_filter = 1
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VB" type="VBoxContainer" parent="VB/PC/MC"]
margin_right = 376.0
margin_bottom = 1031.0
size_flags_vertical = 3

[node name="MCOutputSetting" type="MarginContainer" parent="VB/PC/MC/VB"]
margin_right = 376.0
margin_bottom = 48.0
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/MCOutputSetting"]
margin_left = 4.0
margin_top = 4.0
margin_right = 372.0
margin_bottom = 44.0

[node name="VisibleOutputSettingButton" type="Button" parent="VB/PC/MC/VB/MCOutputSetting/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = SubResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="VB/PC/MC/VB/MCOutputSetting/HBoxContainer"]
margin_left = 44.0
margin_top = 6.0
margin_right = 164.0
margin_bottom = 33.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 2 )
text = "出力設定"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/MCOutputSetting/HBoxContainer"]
margin_left = 168.0
margin_right = 184.0
margin_bottom = 40.0
custom_constants/separation = 16

[node name="PanelOutputSetting" type="PanelContainer" parent="VB/PC/MC/VB"]
margin_top = 52.0
margin_right = 376.0
margin_bottom = 106.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/PanelOutputSetting"]
margin_left = 7.0
margin_top = 7.0
margin_right = 369.0
margin_bottom = 47.0

[node name="CheckButtonIncludeMemo" type="CheckButton" parent="VB/PC/MC/VB/PanelOutputSetting/HBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="CenterContainer" type="CenterContainer" parent="VB/PC/MC/VB/PanelOutputSetting/HBoxContainer"]
margin_left = 80.0
margin_right = 304.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
mouse_filter = 1

[node name="Label" type="Label" parent="VB/PC/MC/VB/PanelOutputSetting/HBoxContainer/CenterContainer"]
margin_top = 8.0
margin_right = 224.0
margin_bottom = 32.0
rect_min_size = Vector2( 86, 0 )
custom_fonts/font = ExtResource( 5 )
text = "メモをデータ出力対象に含める"

[node name="MCMapSetting" type="MarginContainer" parent="VB/PC/MC/VB"]
margin_top = 110.0
margin_right = 376.0
margin_bottom = 158.0
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/MCMapSetting"]
margin_left = 4.0
margin_top = 4.0
margin_right = 372.0
margin_bottom = 44.0

[node name="VisibleMapSettingButton" type="Button" parent="VB/PC/MC/VB/MCMapSetting/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = SubResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="VB/PC/MC/VB/MCMapSetting/HBoxContainer"]
margin_left = 44.0
margin_top = 6.0
margin_right = 164.0
margin_bottom = 33.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 2 )
text = "表示設定"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/MCMapSetting/HBoxContainer"]
margin_left = 168.0
margin_right = 184.0
margin_bottom = 40.0
custom_constants/separation = 16

[node name="PanelMapSetting" type="PanelContainer" parent="VB/PC/MC/VB"]
margin_top = 162.0
margin_right = 376.0
margin_bottom = 200.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/PanelMapSetting"]
margin_left = 7.0
margin_top = 7.0
margin_right = 369.0
margin_bottom = 31.0

[node name="CenterContainer" type="CenterContainer" parent="VB/PC/MC/VB/PanelMapSetting/HBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
mouse_filter = 1

[node name="Label" type="Label" parent="VB/PC/MC/VB/PanelMapSetting/HBoxContainer/CenterContainer"]
margin_right = 160.0
margin_bottom = 24.0
rect_min_size = Vector2( 86, 0 )
custom_fonts/font = ExtResource( 5 )
text = "サムネイル基本サイズ"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/PanelMapSetting/HBoxContainer"]
margin_left = 164.0
margin_right = 180.0
margin_bottom = 24.0
custom_constants/separation = 16

[node name="SpinBoxThumbnailSize" type="SpinBox" parent="VB/PC/MC/VB/PanelMapSetting/HBoxContainer"]
margin_left = 184.0
margin_right = 362.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 5000.0
value = 120.0
align = 2

[node name="MCMapCondition" type="MarginContainer" parent="VB/PC/MC/VB"]
margin_top = 204.0
margin_right = 376.0
margin_bottom = 252.0
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/MCMapCondition"]
margin_left = 4.0
margin_top = 4.0
margin_right = 372.0
margin_bottom = 44.0

[node name="VisibleMapConditionButton" type="Button" parent="VB/PC/MC/VB/MCMapCondition/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = SubResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="VB/PC/MC/VB/MCMapCondition/HBoxContainer"]
margin_left = 44.0
margin_top = 6.0
margin_right = 170.0
margin_bottom = 33.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 2 )
text = "マップ判別条件"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/MCMapCondition/HBoxContainer"]
margin_left = 174.0
margin_right = 190.0
margin_bottom = 40.0
custom_constants/separation = 16

[node name="PanelClassName" type="PanelContainer" parent="VB/PC/MC/VB"]
margin_top = 256.0
margin_right = 376.0
margin_bottom = 310.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/PanelClassName"]
margin_left = 7.0
margin_top = 7.0
margin_right = 369.0
margin_bottom = 47.0

[node name="CheckButtonClassName" type="CheckButton" parent="VB/PC/MC/VB/PanelClassName/HBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="CenterContainer" type="CenterContainer" parent="VB/PC/MC/VB/PanelClassName/HBoxContainer"]
margin_left = 80.0
margin_right = 170.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
mouse_filter = 1

[node name="Label" type="Label" parent="VB/PC/MC/VB/PanelClassName/HBoxContainer/CenterContainer"]
margin_left = 2.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 32.0
rect_min_size = Vector2( 86, 0 )
custom_fonts/font = ExtResource( 5 )
text = "class_name"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/PanelClassName/HBoxContainer"]
margin_left = 174.0
margin_right = 178.0
margin_bottom = 40.0

[node name="CenterContainer_2" type="CenterContainer" parent="VB/PC/MC/VB/PanelClassName/HBoxContainer"]
margin_left = 182.0
margin_right = 317.0
margin_bottom = 40.0
rect_min_size = Vector2( 135, 40 )
mouse_filter = 1

[node name="LineEditClassName" type="LineEdit" parent="VB/PC/MC/VB/PanelClassName/HBoxContainer/CenterContainer_2"]
margin_right = 135.0
margin_bottom = 40.0
rect_min_size = Vector2( 135, 40 )
custom_fonts/font = ExtResource( 4 )
text = "Map"

[node name="ReloadButton" type="Button" parent="VB/PC/MC/VB/PanelClassName/HBoxContainer"]
margin_left = 321.0
margin_right = 361.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = SubResource( 6 )
expand_icon = true

[node name="PanelDirPath" type="PanelContainer" parent="VB/PC/MC/VB"]
margin_top = 314.0
margin_right = 376.0
margin_bottom = 368.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/PanelDirPath"]
margin_left = 7.0
margin_top = 7.0
margin_right = 369.0
margin_bottom = 47.0

[node name="CheckButtonDirPath" type="CheckButton" parent="VB/PC/MC/VB/PanelDirPath/HBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="VB/PC/MC/VB/PanelDirPath/HBoxContainer"]
margin_left = 80.0
margin_right = 170.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
mouse_filter = 1

[node name="Label" type="Label" parent="VB/PC/MC/VB/PanelDirPath/HBoxContainer/CenterContainer"]
margin_left = 2.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 32.0
rect_min_size = Vector2( 86, 0 )
custom_fonts/font = ExtResource( 5 )
text = "dir_path"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/PanelDirPath/HBoxContainer"]
margin_left = 174.0
margin_right = 178.0
margin_bottom = 40.0

[node name="CenterContainer_2" type="CenterContainer" parent="VB/PC/MC/VB/PanelDirPath/HBoxContainer"]
margin_left = 182.0
margin_right = 362.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
mouse_filter = 1

[node name="LineEditDirPath" type="LineEdit" parent="VB/PC/MC/VB/PanelDirPath/HBoxContainer/CenterContainer_2"]
visible = false
margin_right = 180.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
custom_fonts/font = ExtResource( 4 )
placeholder_text = "res://"

[node name="MapCustomDataHead" type="MarginContainer" parent="VB/PC/MC/VB"]
margin_top = 372.0
margin_right = 376.0
margin_bottom = 420.0
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/MapCustomDataHead"]
margin_left = 4.0
margin_top = 4.0
margin_right = 372.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="VB/PC/MC/VB/MapCustomDataHead/HBoxContainer"]
margin_top = 6.0
margin_right = 234.0
margin_bottom = 33.0
rect_min_size = Vector2( 234, 0 )
custom_fonts/font = ExtResource( 2 )
text = "カスタムデータテンプレート"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/MapCustomDataHead/HBoxContainer"]
margin_left = 238.0
margin_right = 250.0
margin_bottom = 40.0
custom_constants/separation = 12

[node name="AddCustomDataButton" type="Button" parent="VB/PC/MC/VB/MapCustomDataHead/HBoxContainer"]
margin_left = 254.0
margin_right = 294.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = SubResource( 6 )
expand_icon = true

[node name="VSeparator_2" type="VSeparator" parent="VB/PC/MC/VB/MapCustomDataHead/HBoxContainer"]
margin_left = 298.0
margin_right = 310.0
margin_bottom = 40.0
custom_constants/separation = 12

[node name="RemoveCustomDataButton" type="Button" parent="VB/PC/MC/VB/MapCustomDataHead/HBoxContainer"]
margin_left = 314.0
margin_right = 354.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = SubResource( 6 )
expand_icon = true

[node name="MapCustomDataHead2" type="PanelContainer" parent="VB/PC/MC/VB"]
margin_top = 424.0
margin_right = 376.0
margin_bottom = 469.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/MapCustomDataHead2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 369.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="VB/PC/MC/VB/MapCustomDataHead2/HBoxContainer"]
margin_right = 50.0
margin_bottom = 31.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 3 )
text = "自動
付与"

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/MapCustomDataHead2/HBoxContainer"]
margin_left = 54.0
margin_right = 58.0
margin_bottom = 31.0

[node name="Label_2" type="Label" parent="VB/PC/MC/VB/MapCustomDataHead2/HBoxContainer"]
margin_left = 62.0
margin_top = 3.0
margin_right = 144.0
margin_bottom = 27.0
rect_min_size = Vector2( 82, 0 )
custom_fonts/font = ExtResource( 5 )
text = "名前"

[node name="VSeparator_2" type="VSeparator" parent="VB/PC/MC/VB/MapCustomDataHead2/HBoxContainer"]
margin_left = 148.0
margin_right = 152.0
margin_bottom = 31.0

[node name="Label_3" type="Label" parent="VB/PC/MC/VB/MapCustomDataHead2/HBoxContainer"]
margin_left = 156.0
margin_top = 3.0
margin_right = 242.0
margin_bottom = 27.0
rect_min_size = Vector2( 86, 0 )
custom_fonts/font = ExtResource( 5 )
text = "初期値"

[node name="MapCustomData_0" type="PanelContainer" parent="VB/PC/MC/VB"]
margin_top = 473.0
margin_right = 376.0
margin_bottom = 527.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VB/PC/MC/VB/MapCustomData_0"]
margin_left = 7.0
margin_top = 7.0
margin_right = 369.0
margin_bottom = 47.0

[node name="CheckButton" type="CheckButton" parent="VB/PC/MC/VB/MapCustomData_0/HBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="LineEditCustomDataName" type="LineEdit" parent="VB/PC/MC/VB/MapCustomData_0/HBoxContainer"]
margin_left = 80.0
margin_right = 170.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = ExtResource( 4 )

[node name="VSeparator" type="VSeparator" parent="VB/PC/MC/VB/MapCustomData_0/HBoxContainer"]
margin_left = 174.0
margin_right = 178.0
margin_bottom = 40.0

[node name="LineEditCustomDataValue" type="LineEdit" parent="VB/PC/MC/VB/MapCustomData_0/HBoxContainer"]
margin_left = 182.0
margin_right = 362.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 0 )
custom_fonts/font = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="VB/PC/MC/VB"]
margin_top = 531.0
margin_right = 376.0
margin_bottom = 1031.0
rect_min_size = Vector2( 0, 500 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="IsMapCheck" type="Node" parent="."]
script = SubResource( 8 )

[connection signal="pressed" from="VB/MCMainButtons/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VB/MCMainButtons/HBoxContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="VB/MC/SettingVisibleButton" to="." method="_on_SettingVisibleButton_pressed"]
[connection signal="pressed" from="VB/PC/MC/VB/MCOutputSetting/HBoxContainer/VisibleOutputSettingButton" to="." method="_on_VisibleOutputSettingButton_pressed"]
[connection signal="pressed" from="VB/PC/MC/VB/MCMapSetting/HBoxContainer/VisibleMapSettingButton" to="." method="_on_VisibleMapSettingButton_pressed"]
[connection signal="pressed" from="VB/PC/MC/VB/MCMapCondition/HBoxContainer/VisibleMapConditionButton" to="." method="_on_VisibleMapConditionButton_pressed"]
[connection signal="toggled" from="VB/PC/MC/VB/PanelClassName/HBoxContainer/CheckButtonClassName" to="." method="_on_CheckButtonClassName_toggled"]
[connection signal="pressed" from="VB/PC/MC/VB/PanelClassName/HBoxContainer/ReloadButton" to="." method="_on_ReloadButton_pressed"]
[connection signal="toggled" from="VB/PC/MC/VB/PanelDirPath/HBoxContainer/CheckButtonDirPath" to="." method="_on_CheckButtonDirPath_toggled"]
[connection signal="pressed" from="VB/PC/MC/VB/MapCustomDataHead/HBoxContainer/AddCustomDataButton" to="." method="_on_AddCustomDataButton_pressed"]
[connection signal="pressed" from="VB/PC/MC/VB/MapCustomDataHead/HBoxContainer/RemoveCustomDataButton" to="." method="_on_RemoveCustomDataButton_pressed"]
[connection signal="text_changed" from="VB/PC/MC/VB/MapCustomData_0/HBoxContainer/LineEditCustomDataName" to="." method="_on_LineEditCustomDataName_text_changed"]
[connection signal="text_changed" from="VB/PC/MC/VB/MapCustomData_0/HBoxContainer/LineEditCustomDataValue" to="." method="_on_LineEditCustomDataValue_text_changed"]
